@@ -22,6 +22,7 @@ typedef seL4_CPtr seL4_ARM_SIDControl;
 typedef seL4_CPtr seL4_ARM_SID;
 typedef seL4_CPtr seL4_ARM_CBControl;
 typedef seL4_CPtr seL4_ARM_CB;
+typedef seL4_CPtr seL4_ARM_SMC;
 
 typedef enum {
     seL4_ARM_PageCacheable = 0x01,
