@@ -27,7 +27,8 @@ enum {
     seL4_CapSMMUSIDControl      = 12, /* global SMMU SID controller cap, null cap if not supported */
     seL4_CapSMMUCBControl       = 13, /* global SMMU CB controller cap, null cap if not supported */
     seL4_CapInitThreadSC        = 14, /* initial thread's scheduling context cap, null cap if not supported */
-    seL4_NumInitialCaps         = 15
+    seL4_CapSMC                 = 15, /* global SMC cap, null cap if not supported */
+    seL4_NumInitialCaps         = 16
 };
 
 /* Legacy code will have assumptions on the vspace root being a Page Directory
